@@ -62,6 +62,7 @@ Other Changes:
   This affects clamping window within the visible area: with this option enabled title bars need to be visible. (#899)
 - Window: Fixed using SetNextWindowPos() on a child window (which wasn't really documented) position the cursor as expected
   in the parent window, so there is no mismatch between the layout in parent and the position of the child window. 
+- InputFloat: When using ImGuiInputTextFlags_ReadOnly the step buttons are disabled. (#2257)
 - Error recovery: Extraneous/undesired calls to End() are now being caught by an assert in the End() function itself 
   at the call site (instead of being reported in EndFrame). Past the assert, they don't lead to crashes any more. (#1651)
 - Error recovery: Missing calls to End(), pass the assert, should not lead to crashes or to the fallback Debug window 
